# ai-workspace

./: .editorconfig  .gitattributes  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  Makefile  pyproject.toml
backend/src/aiworkspace/: main.py
backend/src/aiworkspace/api/: router.py
backend/src/aiworkspace/api/v1/: health.py
backend/src/aiworkspace/core/: config.py  container.py  logging.py
backend/src/aiworkspace/domain/: protocols.py
backend/src/aiworkspace/services/health/: service.py
backend/tests/: test_health.py
nginx/: nginx.conf
web/: .prettierrc  Dockerfile  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: app.html
web/src/dev/mock-api/: helpers.ts  index.ts  plugin.ts  router.ts  types.ts
web/src/lib/app/: index.ts
web/src/lib/app/layouts/: AppShell.svelte  index.ts
web/src/lib/app/styles/: components.badge.css  components.button.css  components.card.css  components.css  components.typography.css  global.css  themes.css  tokens.css
web/src/lib/entities/: index.ts
web/src/lib/features/: index.ts
web/src/lib/features/llm-brand-icon/: index.ts
web/src/lib/features/panel-expand/: index.ts
web/src/lib/features/theme-toggle/: index.ts
web/src/lib/pages/: index.ts
web/src/lib/pages/hello/: Hello.svelte  index.ts
web/src/lib/pages/workspace/: index.ts  (+1 more)
web/src/lib/widgets/: index.ts
web/src/mocks/: index.ts  workspace.ts
web/src/routes/: +layout.svelte  +page.svelte  +page.ts
web/src/routes/welcome/: +page.svelte
web/src/routes/workspace/: +layout.svelte  +page.svelte
(+78 files in other folders)
